# tunedmode

./: LICENSE  README.md  meson.build  meson_options.txt  tunedmode.py
data/: com.feralinteractive.GameMode.service.in  tunedmode.service.in
scripts/: tunedmode.in
